--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,10 @@ django-cors-headers = "*"
 psycopg2-binary = "*"
 djangorestframework-simplejwt = "*"
 djangorestframework-camel-case = "*"
+pillow = "*"
+django-storages = "*"
+minio = "*"
+boto3 = "*"
 
 [dev-packages]
 
